<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="Home" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_menu"
        android:title="My Profile" />

    <item
        android:id="@+id/nav_leave"
        android:icon="@drawable/ic_leave_approval_menu"
        android:title="@string/leave_approval" />
    <item
        android:id="@+id/nav_calender"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calender" />
    <item
        android:id="@+id/nav_attendance"
        android:icon="@drawable/ic_attendance_report_menu"
        android:title="@string/attendance_report" />
    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ic_news_feed_menu"
        android:title="@string/news_feed" />
    <item
        android:id="@+id/nav_announcement"
        android:icon="@drawable/ic_announcement_menu"
        android:title="@string/announcement" />
    <item
        android:id="@+id/nav_holiday"
        android:icon="@drawable/ic_holiday_calendar"
        android:title="@string/holiday_cal" />
    <item
        android:id="@+id/nav_training"
        android:icon="@drawable/ic_training_menu"
        android:title="@string/training" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_share_menu"
        android:title="Share" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about_us"
        android:title="@string/about_us" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

    <item android:title="" />
    <item android:title="" />


</menu>
